--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,10 @@
 networks:
   bridge:
     driver: bridge
+  kafka_network:
+    external: true  # Connect to your existing Kafka network
 
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest 
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 32181
-      ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      bridge:
-        aliases:
-          - zookeeper
-  
-  kafka:
-    image: confluentinc/cp-kafka
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_ BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: 0.0.0.0
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:32181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      JMX_PORT: 9999
-    networks:
-      bridge:
-        aliases:
-        - kafka
-  
-  kafka-producer:
-    image: kafka-producer
-    depends_on:
-      - kafka 
-    environment:
-      KAFKA_SERVER: "kafka:9092"
-      ZOOKEEPER_SERVER: "zookeeper:32181"
-      PRODUCER_INTERVAL: 100
-    networks:
-      - bridge
-  
-  flink-processor:
-    image: flink-processor
-    depends_on:
-      - kafka
-    environment:
-      KAFKA SERVER: "kafka:9092"
-      ZOOKEEPER SERVER: "zookeeper:32181"
-      PRODUCER_INTERVAL: 100
-    networks:
-      - bridge
-
-  generate-data:
-    image: generate-data
-    depends_on:
-      - postgres 
-    networks:
-      - bridge
-
   postgres:
     build:
       context: ./postgres
@@ -65,7 +12,7 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES PASSWORD=postgres
+      - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
     logging:
       options:
@@ -75,7 +22,21 @@ services:
       - 5432:5432
     networks:
       - bridge
+  
+  option-greeks-processor:
+    build:
+      context: ./option-greeks-processor
+    environment:
+      # Connect to your existing Kafka service
+      KAFKA_SERVER: "kafka:9092"         # Update this to your Kafka broker address
+      KAFKA_TOPIC: "options"             # Update this to your options data topic
+      POSTGRES_HOST: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "postgres"
+    networks:
+      - bridge
+      - kafka_network  # Connect to existing Kafka network
 
 volumes:
-  settings:
-  data:
+  postgres-data:
